Added ESLint config and Jest

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -19,5 +19,6 @@
       "@controllers/*": ["./src/controllers/*"],
       "@config/*": ["./src/config/*"]
     }
-  }
+  },
+  "include": ["src/**/*"]
 }
